cabal-version:   3.8
name:            math-chart
version:         0.1.0.0
license:         NONE
author:          hemakim0215@naver.com
maintainer:      kimmo
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable math-chart
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.1.0,
            Chart,
            Chart-diagrams,
            diagrams,
            diagrams-lib,
            data-default,
            data-default-class
    hs-source-dirs:   app
    default-language: Haskell2010
